[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binance-momentum-lab"
version = "0.1.0"
description = "Safe USD-M futures momentum monitor and local research lab"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb>=1.2,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "pytz>=2025.2",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=14,<16",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/binance_momentum_lab"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
